# machine_learning

./: capabilities.py  machine_learning.py  pyproject.toml
learning/: Brain_Tumor_Detection.py  Brain_Tumor_Detection_with_CNN_Model.py  Breast_Cancer_Prediction.py  Colon_Cancer_Histopathological_Images.py  Heart_Attack_Dataset.py  Medical_Images_Slide_Show.py  brain_image.py  list_of_defs.py  machine_learning.py
my_project/: brain_image.py  pyproject.toml
