[tool.poetry]
name = "machine-learning_1"
version = "0.1.0"
description = ""
authors = ["Andrey Stoletov <stoletov314@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
seaborn = "^0.13.2"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
linearregression = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
