[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Andrey Stoletov <stoletov314@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
seaborn = "^0.13.2"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
linearregression = "^0.0.1"
opencv-python-headless = "^4.9.0.80"
cv = "^1.0.0"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.2"
torch = "^2.2.1"
torchvision = "^0.17.1"
torchsummary = "^1.5.1"
torchmetrics = "^1.3.2"
mlxtend = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
